crates/arity-formatter/tests/snapshots/dcf_format__authors_at_r_inline_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Authors@R: person("Jo", "La", email = "jo@example.com", role = c("aut", "cre"))
