crates/arity-formatter/tests/snapshots/dcf_format__collate_comment_line_stays_at_column_zero_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Collate:
    'a.R'
# an interior comment
    'b.R'
