crates/arity-formatter/tests/snapshots/dcf_format__collate_quoted_order_preserved_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Collate:
    'b.R'
    'a.R'
