crates/arity-formatter/tests/snapshots/dcf_format__comment_before_field_moves_with_it_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
# about imports
Imports:
    a,
    b
