crates/arity-formatter/tests/snapshots/dcf_format__comment_between_fields_attaches_forward_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
# about the package name
Package: p
Version: 1.0
