crates/arity-formatter/tests/snapshots/dcf_format__comment_indented_is_value_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Description: one # two three
