crates/arity-formatter/tests/snapshots/dcf_format__comment_trailing_has_no_anchor_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Version: 1.0
# dangling
