crates/arity-formatter/tests/snapshots/dcf_format__crlf_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Imports:
    a,
    b
