crates/arity-formatter/tests/snapshots/dcf_format__declined_duplicate_fields_refusal.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: err.to_string()
---
left unformatted: duplicate field "Package"
