crates/arity-formatter/tests/snapshots/dcf_format__declined_encoding_latin1_refusal.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: err.to_string()
---
left unformatted: declared encoding "latin1" is not UTF-8
