crates/arity-formatter/tests/snapshots/dcf_format__declined_field_name_spaced_refusal.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: err.to_string()
---
left unformatted: whitespace before the colon of field "Package"
